# metamorphic

./: COPYRIGHT  README  metamorphic.cabal
src/: A.hs  ADT.hs  ADTlib.hs  ADTprog.hs  Alib.hs  Aprog.hs  Graph.hs  GraphData.hs  Heap.hs  SimpleMap.hs  Thread.hs  Tree.hs  data-type-newtype.hs
