name:                metamorphic
version:             0.1.0.0
synopsis:            metamorphisms: cata . ana  or  unfold . fold
homepage:            http://github.com/technogeeky/metamorphic
license:             OtherLicense
license-file:        LICENSE
author:              Martin Erwig <erwig@cs.orst.edu>
maintainer:          Drew Day <drewday@gmail.com>
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Tree, Thread, SimpleMap, Heap, GraphData, Graph, Aprog, Alib, A
  build-depends:       base ==4.5.*
  hs-source-dirs:      src
